--- a/azgharie-airport-azga-supreme-leader-airport/manifest.json
+++ b/azgharie-airport-azga-supreme-leader-airport/manifest.json
@@ -4,12 +4,12 @@
   "title": "Supreme Leader Airport",
   "manufacturer": "",
   "creator": "Dites33",
-  "package_version": "1.0.0",
-  "minimum_game_version": "1.21.18",
+  "package_version": "2.1.0",
+  "minimum_game_version": "1.22.2",
   "release_notes": {
     "neutral": {
-      "LastUpdate": "VERSION 1.0.0 RELEASED JANUARY 1, 2022\\nFirst release of the Supreme Leader Airport.\nThis airport is fictional and done only for the Azgharie Community.\n\nScene / Coding / Modeling : Dites33\nScene testing and fly testing : Vince\n\nThanks to the Azgharie Community and happy new year ;)",
-      "OlderHistory": ""
+      "LastUpdate": "",
+      "OlderHistory": "VERSION 1.0.0 RELEASED JANUARY 1, 2022\\nFirst release of the Supreme Leader Airport.\nThis airport is fictional and done only for the Azgharie Community.\n\nScene / Coding / Modeling : Dites33\nScene testing and fly testing : Vince\n\nThanks to the Azgharie Community and happy new year ;)"
     }
   }
 }
